<resources>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal">Abnormal</string>
    <string name="add_camer_invi">ID is invalid. Please try again.</string>
    <string name="add_camera">Add Camera</string>
    <string name="add_camera_1">Mode 1</string>
    <string name="add_camera_1_show">Camera scanning distribution network</string>
    <string name="add_camera_2">Mode 2</string>
    <string name="add_camera_3">Mode 3</string>
    <string name="add_camera_4">Mode 4</string>
    <string name="add_device_danale_dialog_more">Select the more stronger wifi,input the correct wifi password,then the device can connect to network quickly. \n Below operation can cause device connection internet fail: \n 1、Check whether WiFi is switched on, and this setting may cause the device to be disconnected from the Internet. You can temporarily turn off the anti-rubbing network, and then restore the router\'s Settings after the device is successfully connected. \n 2、If you connect to dual frequency router,please check the device connect to 2.4GHz or 5GHz,please make sure it is 2.4GHz. \n 3、The device can not support WPA/WPA2 WiFi,please select other WiFi, \n 4、WiFi.If your family is bridge connection,because bridge connection could cause your network very unstable,we suggest you use non-bridge connection.</string>
    <string name="add_device_danale_dialog_more_title">Wi-Fi Requirements for Equipment</string>
    <string name="add_device_danale_more">Learn more</string>
    <string name="add_device_danale_next">Next</string>
    <string name="add_device_danale_wifi">Fail to get wifi link</string>
    <string name="add_device_danale_wifi1_1">Please connect to your router first</string>
    <string name="add_device_danale_wifi_24g">Only supports 2.4GHz wifi</string>
    <string name="add_device_danale_wifi_introduction">Before configuring the network, please confirm that the device is powered on and is in the code matching state</string>
    <string name="add_device_danale_wifi_name">Please enter the router name</string>
    <string name="add_device_danale_wifi_pass">Please input password</string>
    <string name="add_device_now">Add now</string>
    <string name="add_device_tip">Please click the button below to add\nYour first device~</string>
    <string name="add_friend_device">Add friend\'s device</string>
    <string name="add_show_config1">Device connecting</string>
    <string name="add_show_config1_show">The device is connecting to the network ... \n Please keep the device close to the router, please do not power off during the network configuration \n The connection takes about 1-2 minutes, please wait a moment</string>
    <string name="add_show_config2_show">1. Press and hold the RES reset button until the indicator light flashes slowly \n 2. Please reconnect the device hotspot and keep connected \n 3. Make sure the WiFi name and password are correct when configuring WiFi</string>
    <string name="add_show_config_1">Configure the device to connect to the WiFi network</string>
    <string name="add_show_config_1_show">You have a new device that needs to be connected to your home for WiFi use, or you need to reconfigure the WiFi connection of an old device and have remote access to it. Please select this.</string>
    <string name="add_show_config_2">Add online camera</string>
    <string name="add_show_config_2_show">Your device has been connected to the router, you need to add it to the App, please select this.</string>
    <string name="add_show_config_3">The phone connects directly to the device</string>
    <string name="add_show_config_3_show">\"You want to connect your phone directly to your device\'s WiFi, point-to-point, and use it up close, unlike connecting to your router for remote access, select this.\"</string>
    <string name="add_tips_item52">Memory card format is not supported, please format</string>
    <string name="add_twodimensioncode">Starting QR code program...</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="alarm_pir_push">Alarm push</string>
    <string name="alarm_setting_1">Motion detection</string>
    <string name="alarm_setting_3">Alarm video duration(s)</string>
    <string name="alarm_setting_4">Alarm time delay(s)</string>
    <string name="alarm_setting_5">Motion detection sensitivity</string>
    <string name="alarm_setting_5_L">Low</string>
    <string name="alarm_setting_5_M">Middle</string>
    <string name="alarm_setting_5_h">High</string>
    <string name="alarm_setting_6">Figure tracking</string>
    <string name="alarm_setting_7">Human detection</string>
    <string name="alerm_no_log">No data</string>
    <string name="allow">Allow</string>
    <string name="ap_add_title2">AP added device, whether the network？</string>
    <string name="ap_next">Go to WiFi configuration</string>
    <string name="app_name">LookCamPro</string>
    <string name="app_name_show">HD</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at_night_time">At night time</string>
    <string name="back">Back</string>
    <string name="biz_add_cancel">Cancel</string>
    <string name="biz_add_creat">Sure</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="btn_no">NO</string>
    <string name="btn_ok">YES</string>
    <string name="camera">Camera</string>
    <string name="camera_id">Cam ID</string>
    <string name="camera_name">Name</string>
    <string name="camera_not_online">Camera is offline</string>
    <string name="camera_permissions_content">Scanning QR code requires camera permission, otherwise the application cannot be used normally.\n You can reset the application permissions through \'Settings\' -&gt;\'Applications\' -&gt;\'Permission Settings\'.</string>
    <string name="camera_permissions_title">Camera permission is missing</string>
    <string name="camera_pwd">Password</string>
    <string name="camera_user">Username</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_updata_1">Download update file</string>
    <string name="check_updata_2">Firmware upgrade</string>
    <string name="check_updata_3">Checking new version processing</string>
    <string name="check_updata_4">Check for new version errors</string>
    <string name="check_updata_5">Check the new version successfully</string>
    <string name="check_updata_6">Version update error</string>
    <string name="check_updata_7">SD card needs to be inserted and updated</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cloud_log">Cloud record</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="delete">Delete</string>
    <string name="dialog_exit_play_tips">Quit Playing?</string>
    <string name="door_white_list_edit">Edit</string>
    <string name="main_file_photo">Photo</string>
    <string name="main_file_video">Video</string>
    <string name="main_select_all">Select all</string>
    <string name="my_setup_cancel">Cancel</string>
    <string name="n_apconnect_1show">Turn on the phone WiFi Settings</string>
    <string name="n_apconnect_2show">Connect \"TUT-******\" device hot spot</string>
    <string name="ngetwifi_show2">Make sure that the router is 2.4G and the password entered is correct, otherwise the device cannot be successfully networked</string>
    <string name="save_to_local_album">Save to local album</string>
    <string name="setting_user">Change Password</string>
    <string name="share">Share</string>
    <string name="sure">Sure</string>
</resources>