<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#0000"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/shape_rectangle_radius_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/red"
            android:gravity="center"
            android:id="@+id/tvMoreDel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/delete"/>
        <View
            android:background="#4d000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/tvMoreShared"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/share"/>
        <View
            android:background="#4d000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/tvMoreSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save_to_local_album"/>
    </LinearLayout>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:id="@+id/tvMoreCancel"
        android:background="@drawable/shape_rectangle_radius_white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/my_setup_cancel"/>
</LinearLayout>
