<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/Relative_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            style="@style/button_back_style1"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_camera_setting"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/add_camera"
            android:singleLine="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_right_size56"
        android:layout_marginRight="@dimen/margin_right_size56"
        android:src="@mipmap/ic_add_camera_tips"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/all_other_text_size"
        android:textColor="@color/color_qh_bom_normal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_apconnect_1show"/>
    <TextView
        android:textSize="@dimen/all_other_text_size"
        android:textColor="@color/color_qh_bom_normal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/n_apconnect_2show"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="15sp"
        android:textColor="@color/color_white"
        android:id="@+id/tvNext"
        android:background="@drawable/btn_blue_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_right_size26"
        android:layout_marginTop="@dimen/margin_right_size26"
        android:layout_marginRight="@dimen/margin_right_size26"
        android:layout_marginBottom="@dimen/margin_right_size56"
        android:text="@string/ap_next"
        android:textAllCaps="false"/>
</LinearLayout>
