<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_border_white"
    android:layout_width="240dp"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="14sp"
        android:textColor="@color/z6"
        android:gravity="start"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dialog_exit_play_tips"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <View
        android:background="@color/line_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="23dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/z8"
            android:gravity="center"
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/biz_add_cancel"
            android:layout_weight="1"/>
        <View
            android:layout_gravity="center_vertical"
            android:background="@color/line_color"
            android:layout_width="0.5dp"
            android:layout_height="27dp"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/color_main"
            android:gravity="center"
            android:id="@+id/tvExit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/biz_add_creat"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
