<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:background="#30000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/shape_dialog_bg"
        android:padding="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:textSize="16sp"
            android:textColor="#666666"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/dialog_title"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:text="@string/setting_user"/>
        <EditText
            android:textSize="14sp"
            android:textColor="#666666"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/tv_content"
            android:background="@drawable/selector_input"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/add_device_danale_wifi_pass"
            android:maxLength="20"/>
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="270dp"
            android:minHeight="40dp">
            <TextView
                android:textSize="14sp"
                android:textColor="@drawable/selector_bg_press"
                android:gravity="center"
                android:id="@+id/tv_1"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/tv_3"
                android:background="#eee"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@drawable/selector_bg_press"
                android:gravity="center"
                android:id="@+id/tv_2"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sure"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
