<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center"
        android:id="@+id/Relative_top"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            style="@style/button_back_style1"/>
        <com.shix.shixipc.view.MyTextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:ellipsize="marquee"
            android:layout_gravity="center_vertical"
            android:id="@+id/textview_add_camera"
            android:focusableInTouchMode="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="120dp"
            android:text="@string/add_camera"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:layout_centerInParent="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:layout_marginStart="10dp"/>
        <ImageButton
            android:background="#00000000"
            android:padding="5dp"
            android:visibility="invisible"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:src="@mipmap/qh_scan"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/ivDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp"
        android:src="@mipmap/config_wifi_h"
        android:scaleType="centerInside"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/wifi_input_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/n_soud_ssid"
            android:layout_marginStart="10dp"/>
        <EditText
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:id="@+id/edit_wify_name"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:maxLines="1"
            android:maxLength="30"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/wifi_input_bg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/n_soud_pwd"
            android:layout_marginStart="10dp"/>
        <EditText
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:id="@+id/edit_wify_pass"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:hint="@string/add_device_danale_wifi_pass"
            android:maxLines="1"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:paddingStart="7dp"
            android:paddingEnd="5dp"/>
        <ImageView
            android:id="@+id/edit_wify_pass_eye"
            android:padding="13dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/eyes_close"
            android:layout_marginEnd="6dp"/>
    </LinearLayout>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/z4"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_device_danale_wifi1_1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/z4"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_device_danale_wifi_introduction"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/z4"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ngetwifi_show2"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <TextView
                android:textSize="13sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_device_danale_wifi_24g"/>
            <View
                android:layout_width="15dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="13sp"
                android:textColor="@color/color_n_buttom_select_text_color"
                android:gravity="center"
                android:id="@+id/add_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_device_danale_more"/>
        </LinearLayout>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/color_white"
            android:gravity="center"
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/btn_next"
            android:background="@drawable/btn_blue_selector"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_device_danale_next"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
