<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center_vertical"
        android:id="@+id/Relative_top"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <Button
            android:id="@+id/back"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            style="@style/button_back_style1"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true">
            <TextView
                android:textSize="@dimen/text_size14"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="end|center_vertical"
                android:id="@+id/picture_phone"
                android:background="@mipmap/checktopleft_pressed"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:text="@string/main_file_photo"
                android:singleLine="true"
                android:textAllCaps="false"/>
            <TextView
                android:textSize="@dimen/text_size14"
                android:textColor="@color/color_929294"
                android:gravity="center"
                android:layout_gravity="end|center_vertical"
                android:id="@+id/picture_remote"
                android:background="@mipmap/checkright_normal"
                android:layout_width="77dp"
                android:layout_height="30dp"
                android:text="@string/main_file_video"
                android:singleLine="true"
                android:textAllCaps="false"/>
        </LinearLayout>
        <Button
            android:gravity="end|center_vertical"
            android:id="@+id/ok"
            android:text="@string/door_white_list_edit"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_size20"
            android:layout_alignParentEnd="true"
            style="@style/button_done_style"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fra_file_pic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fra_file_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/ll_anim"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:textSize="13sp"
            android:textColor="#ffffff"
            android:id="@+id/file_select_all"
            android:background="@drawable/background_btnbg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/main_select_all"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>
        <Button
            android:textSize="13sp"
            android:textColor="#ffffff"
            android:id="@+id/file_delete"
            android:background="@drawable/background_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/delete"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>
</LinearLayout>
